name:                ivory-tower-canopen
version:             0.1.0.0
synopsis:            CANOpen
description:         Ivory Tower implementation of CANOpen protocol
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
category:            Embedded
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CANOpen.Native,
                       CANOpen.Tower
                       CANOpen.Tower.LSS
                       CANOpen.Tower.LED
                       CANOpen.Tower.NMT
                       CANOpen.Tower.NMT.Types
                       CANOpen.Tower.SDO
                       CANOpen.Tower.SDO.Types
                       CANOpen.Tower.PDO
                       CANOpen.Tower.Utils

  build-depends:       base >= 4.6,
                       bytestring,
                       dlist,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-serialize,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-hal,
                       ivory-tower-base,
                       ivory-tower-canopen-core,
                       canopen-schema-tower

  default-language:    Haskell2010
  ghc-options:         -Wall
-- -Werror

executable canopen-posix-test-gen
  main-is:             CANOpenPosix.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-serialize,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config,
                       tower-hal,
                       can4disco,
                       ivory-tower-base,
                       ivory-tower-posix,
                       ivory-tower-canopen,
                       ivory-tower-canopen-core,
                       canopen-schema-tower
