name:                ivory-tower-canopen-core
version:             0.1.0.0
synopsis:            CANOpen
 description:        Core types for Ivory Tower CANOpen stack
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
 category:           Embedded
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CANOpen.Tower.Attr
                       CANOpen.Tower.Types

  build-depends:       base >= 4.6,
                       bytestring,
                       dlist,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-serialize,
                       ivory-hw,
                       tower              >= 0.9,
                       tower-config

  default-language:    Haskell2010
  ghc-options:         -Wall
-- -Werror
